rules.v4
# Generated by iptables-save v1.6.1 on Sat May  4 10:52:04 2019
*mangle
:PREROUTING ACCEPT [52074:49709845]
:INPUT ACCEPT [17576:2476521]
:FORWARD ACCEPT [34498:47233324]
:OUTPUT ACCEPT [8175:48323437]
:POSTROUTING ACCEPT [42673:95556761]
-A PREROUTING -m conntrack --ctstate INVALID -j DROP

-A PREROUTING -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags ACK,URG URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags ACK,FIN FIN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags ACK,PSH PSH -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags PSH,ACK PSH -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,PSH,URG -j DROP
-A PREROUTING -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP

-A PREROUTING -s 224.0.0.0/3 -j DROP
-A PREROUTING -s 169.254.0.0/16 -j DROP
-A PREROUTING -s 172.16.0.0/12 -j DROP
-A PREROUTING -s 192.0.2.0/24 -j DROP
-A PREROUTING -s 240.0.0.0/5 -j DROP
-A PREROUTING -p icmp -j DROP
-A PREROUTING -f -j DROP
COMMIT
# Completed on Sat May  4 10:52:04 2019
# Generated by iptables-save v1.6.1 on Sat May  4 10:52:04 2019
# Completed on Sat May  4 10:52:04 2019
# Generated by iptables-save v1.6.1 on Sat May  4 10:52:04 2019

*filter
:INPUT ACCEPT [7770:1188517]
:FORWARD ACCEPT [14253:17279719]
:OUTPUT ACCEPT [3715:17598698]
:port-scanning - [0:0]
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -m recent --set --name DEFAULT --mask 255.255.255.255 --rsource
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 60 --hitcount 10 --name DEFAULT --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p tcp -m multiport --dports 23,79 -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG SYN -m recent --set --name blacklist_180 --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p udp -m limit --limit 6/hour --limit-burst 1 -m length --length 0:28 -j LOG --log-prefix "Firewall>0 length udp"
-A INPUT -p udp -m length --length 0:28 -m comment --comment "Drop UDP packet with no content" -j DROP

-A INPUT -p tcp --dport 137:139 -j DROP
-A INPUT -p tcp --dport 445 -j DROP
-A INPUT -p udp --dport 137:139 -j DROP
-A INPUT -p udp --dport 445 -j DROP
-A OUTPUT -p tcp --dport 137:139 -j DROP
-A OUTPUT -p tcp --dport 445 -j DROP
-A OUTPUT -p udp --dport 137:139 -j DROP
-A OUTPUT -p udp --dport 445 -j DROP

-A port-scanning -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -m limit --limit 1/sec --limit-burst 2 -j RETURN
-A port-scanning -j DROP
COMMIT
